lox-tests/tests/if/fun_in_then.stderr
ERROR: at 'fun': Expected expression, got Fun
 --> 2:11
  |
2 | if (true) fun foo() {}
  |           ^-^
